--- a/Dreamy/app/src/main/res/values/strings.xml
+++ b/Dreamy/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Dreamy</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="milestones">Milestones</string>
 
 </resources>
