--- a/Dreamy/app/src/main/res/values/strings.xml
+++ b/Dreamy/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="milestones">Milestones</string>
+    <string name="title_activity_front">Front</string>
+    <string name="title_activity_splash">Splash</string>
 
 </resources>
